--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ app/gui/.empty
 app/gui/__pycache__/
 app/__pycache__/
 .DS_Store
+catboost_info/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
