--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "mlinterface"
+name = "ml-interface"
 version = "0.1.0"
 description = ""
 authors = ["HHYurdagul <hhyurdagul@gmail.com>"]
