--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
+[tool.basedpyright]
+typeCheckingMode = "standard"
+
 [tool.poetry]
 name = "ml-interface"
 version = "0.1.0"
@@ -14,11 +17,9 @@ scikit-learn = "^1.5.0"
 openpyxl = "^3.1.4"
 
 [tool.poetry.group.dev.dependencies]
-python-lsp-server = "^1.11.0"
-python-lsp-ruff = "^2.2.1"
-pylsp-mypy = "^0.6.8"
-pylsp-rope = "^0.1.16"
-mypy = "^1.10.1"
+basedpyright = "^1.13.2"
+ruff = "^0.5.0"
+ruff-lsp = "^0.0.54"
 
 [build-system]
 requires = ["poetry-core"]
