--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "numpy==1.26",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
+    "pyside6>=6.7.3",
     "scikit-learn>=1.5.2",
     "tensorflow==2.17",
 ]
